[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
futures = "0.3"
async-stream = "0.3.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tonic = "0.8.3"
tonic-web = "0.5.0"
http = "0.2.8"
prost = "0.11.6"
anyhow = "1.0.69"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
rpc = { path = "../financial-frontend/rpc" }
tower-http = { version = "0.3.5", default-features = false, features = [
    "cors", "fs"
] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tower = "0.4.13"
axum = "0.6.7"
hyper = "0.14.24"
pin-project = "1.0.12"

[build-dependencies]
tonic-build = "0.8.4"

[[bin]]
name = "test-client"
path = "src/client.rs"
